# letsTalkVoiceAgent

./: .env.example  .gitignore  README.md  agents.md  pyproject.toml
src/: agent_langgraph.ipynb  frontend.py  pipeline.ipynb  pipeline.py  transcript.txt
